...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <!-- Checkbox -->
                <CheckBox
                    android:id="@+id/checkbox_consent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"/>
                <!-- TextView for checkbox -->
                <TextView
...
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:layout_margin="20dp"
            android:focusable="true">

            <TextView
                android:id="@+id/textViewProceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proceed"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
...
