<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

    <!-- logo image -->
    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/insurance_logo"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Name of Data Connection -->
    <TextView
        android:id="@+id/itemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Item Text"
        android:textColor="#0076AB"
        app:layout_constraintStart_toEndOf="@+id/itemImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
