<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/data_connection_fragment"
    tools:context=".activities.ui.data_connections.DataConnectionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_connection_by"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#575881"
            android:layout_marginBottom="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_suggested_data_connection_categories"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>