...
    <string name="health_journey_title">Health Journey</string>
    <string name="health_activities">Health Activities</string>
    <string name="labs">Labs</string>
    <string name="lab_detail">Lab Detail</string>
    <string name="pending">Pending</string>
    <string name="connect_now">Connect Now</string>
    <string name="connect_health_records">Connect your health records</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="search_clinics">Search Clinics, Hospitals and Health Systems</string>
    <string name="select_lab">Select Lab</string>
    <string name="search_connection_by_provider">Search Connections by Provider</string>
    <string name="search_50_miles_from_current_location">Searching 50 miles from Current Location</string>
    <string name="contact_us">Contact us</string>
...
